--- a/css/sass/Utils/_variables.scss
+++ b/css/sass/Utils/_variables.scss
@@ -3,11 +3,19 @@ $cd-primary: #579c87;
 $cd-secondary: #fdcb46;
 
 
-// Variables Colors Menu
-$cd-menu1-primary: #fcdfdb;
-$cd-menu1-secondary: #6b4649;
+// Variables Colors Menu 1
+$cd-menu1-bg: #fcdfdb;
+$cd-menu1-txt: #6b4649;
 
+// Variables Colors Menu2
+$cd-menu2-bg: #fff5fe;
+$cd-menu2-a-txt: #c67412;
+$cd-menu2-b-txt: #a56799;
+$cd-menu2-c-txt: #6e4ccc;
 
+// Variables Colors Menu3
+$cd-menu3-bg: #fff5fe;
+$cd-menu3-txt: #c67412;
 
 
 
@@ -15,4 +23,3 @@ $cd-menu1-secondary: #6b4649;
 // Variables Color Button
 $cd-btn-start: #579c87;
 $cd-btn-end: #399276;
-$cd-btn: #579c87;
