--- a/view/menu_1b.html
+++ b/view/menu_1b.html
@@ -27,8 +27,8 @@
 
         <h2>La note enchantée</h2> 
 
-        <main class="block_center width_menu style_menu1"> 
-            <div class="txt_center padding_top"><i class="note_top fas fa-music"></i></div> 
+        <main class="block_center width_menu color_menu--bg1  style_menu1"> 
+            <div class="txt_center padding_top"><i class="note--color note--top fas fa-music"></i></div> 
                 <h2 class="margin_null">La note enchantée</h2>
              
                 <ul>
@@ -98,16 +98,16 @@
                             </header>
 
                             <div class="flex_column">
-                                <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
-                                <p>Baba au rhim revisité avec son coulis de citron</p>
-                                <p>Tarte au citron meringuée destructurée</p>
+                                <p class="padding_left">Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
+                                <p class="padding_left">Baba au rhim revisité avec son coulis de citron</p>
+                                <p class="padding_left">Tarte au citron meringuée destructurée</p>
                             </div>     
 
                         </section>
                     </li>                         
                 </ul>
             
-                <div class="txt_center padding_top"><h4><i class="note_bottom padding_right fas fa-music"></i>La note enchantée</h4></div>        
+                <div class="txt_center padding_top"><h4><i class="note--color note--bottom padding_right fas fa-music"></i>La note enchantée</h4></div>        
             
             </main>
 
