--- a/view/menu_3b.html
+++ b/view/menu_3b.html
@@ -25,82 +25,93 @@
             <a href="../index.html"><h1>ohmyfood</h1></a>        
         </header>  
 
-        <h2>Le chic à la française</h2> 
+        <h2>Le délice des papilles</h2> 
 
-        <main class="block_center width_menu color_menu--bg2 style_menu2"> 
-                <h2 class="margin_null padding_top">Le chic à la française</h2>
+        <main class="block_center width_menu color_menu--bg1  style_menu1"> 
+            <div class="txt_center padding_top"><i class="note--color note--top fas fa-music"></i></div> 
+                <h2 class="margin_null">Le délice des papilles</h2>
              
                 <ul>
                     <li>
-                        <section class="block_center style_menu2--a">
+                        <section class="block_center">
                             <header class="flexbox block_center">
                                 <div class="flex_center">
                                     <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Pour se mettre en appétit</h3>
+                                    <h3 class="hvr-underline-from-left">Pour bien commencer</h3>
                                     <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
                                 </div>
                             </header>
                             <div class="flex_column">
                                 <div class="flex_space-between">
-                                    <p>Tartare de poulpe acidulé aux zests d'orange</p>
-                                    <p>79€</p>
+                                    <p>Tartare de thon assaisonné au yuzu</p>
+                                    <p>55€</p>
                                 </div>
                                 <div class="flex_space-between">
-                                    <p>Velouté de légume d'antan</p>
-                                    <p>57€</p>
+                                    <p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
+                                    <p>89€</p>
                                 </div>
                                 <div class="flex_space-between">
-                                <p>Soupe à l"oignon revisitée</p>
-                                    <p>57€</p>
-                                </div>          
+                                    <p>Velouté de cèpes aux truffes</p>
+                                    <p>56€</p>
+                                </div>
+                            </div>                   
                         </section>
                     </li>                
                     <li>
-                        <section class="block_center style_menu2--b">
+                        <section class="block_center">
                             <header class="flexbox block_center">
                                 <div class="flex_center">
                                     <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Plaisir des papilles</h3>
+                                    <h3 class="hvr-underline-from-left">Pour bien continuer</h3>
                                     <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
                                 </div>
                             </header>
-
                             <div class="flex_column">
                                 <div class="flex_space-between">
-                                    <p>Coquilles Saint-Jacques accompagnées d'une purée de panais</p>
-                                    <p>95€</p>
+                                    <p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
+                                    <p>110€</p>
                                 </div>
                                 <div class="flex_space-between">
-                                    <p>Magret de canard et parmentier de pommes de terres</p>
-                                    <p>88€</p> 
+                                    <p>Langouste rôtie et ses légumes de saison</p>
+                                    <p>225€</p> 
                                 </div>                               
                                 <div class="flex_space-between">
-                                    <p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</p>
-                                    <p>175€</p>
+                                    <p>Côte de boeuf argus et sa purée de panais</p>
+                                    <p>115€</p>
                                 </div>                                
                             </div>     
                         </section>                        
                     </li>      
                     <li> 
-                        <section class="block_center style_menu2--c">
+                        <section class="block_center">
                             <header class="flexbox block_center">
                                 <div class="flex_center">
                                     <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Gourmandises sucrées</h3>
+                                    <h3 class="hvr-underline-from-left">Pour bien terminer</h3>
                                     <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
                                 </div>
                             </header>
-
                             <div class="flex_column">
-                                <p class="padding_left">Pétales de violettes glacés et purée de noisettes</p>
-                                <p class="padding_left">Fondant au chocolat revisité</p>
-                                <p class="padding_left">Millefeuille croustillant </p>
-                            </div>     
+                                <div class="flex_space-between">
+                                    <p>Farandole de desserts du chef</p>
+                                    <p>55€</p>
+                                </div>
+                                <div class="flex_space-between">
+                                    <p>Crème brulée revisitée</p>
+                                    <p>60€</p> 
+                                </div>                               
+                                <div class="flex_space-between">
+                                    <p>Tiramisu à la noisette</p>
+                                    <p>55€</p>
+                                </div>                                
+                            </div> 
 
                         </section>
                     </li>                         
                 </ul>
-                    
+            
+                <div class="txt_center padding_top"><h4><i class="note--color note--bottom padding_right fas fa-music"></i>Le délice des papilles</h4></div>        
+            
             </main>
 
         <a class="btn block_center" href="../index.html">Retour</a>
