--- a/css/sass/Base/_typography.scss
+++ b/css/sass/Base/_typography.scss
@@ -8,6 +8,16 @@
     src: url("./fonts/Devonshire-Regular.ttf");
 }
 
+@font-face{
+    font-family: "Croissantone-regular";
+    src: url("./fonts/Croissantone-regular.ttf");
+}
+
+@font-face{
+    font-family: "Dancing-script";
+    src: url("./fonts/Dancing-script.ttf");
+}
+
 
 html{    
     font-size: .625em; /* fallback IE8+ */
