--- a/view/menu_4b.html
+++ b/view/menu_4b.html
@@ -25,82 +25,95 @@
             <a href="../index.html"><h1>ohmyfood</h1></a>        
         </header>  
 
-        <h2>Le chic à la française</h2> 
+        <h2>La palette du goût</h2> 
 
-        <main class="block_center width_menu color_menu--bg2 style_menu2"> 
-                <h2 class="margin_null padding_top">Le chic à la française</h2>
+        <main class="block_center width_menu color_menu--bg1  style_menu1"> 
+            <div class="txt_center padding_top"><i class="note--color note--top fas fa-music"></i></div> 
+                <h2 class="margin_null">La palette du goût</h2>
              
                 <ul>
                     <li>
-                        <section class="block_center style_menu2--a">
+                        <section class="block_center">
                             <header class="flexbox block_center">
                                 <div class="flex_center">
                                     <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Pour se mettre en appétit</h3>
+                                    <h3 class="hvr-underline-from-left">Esquisse</h3>
                                     <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
                                 </div>
                             </header>
                             <div class="flex_column">
                                 <div class="flex_space-between">
-                                    <p>Tartare de poulpe acidulé aux zests d'orange</p>
-                                    <p>79€</p>
+                                    <p>Fricassée d'escargot au piment d'espelette</p>
+                                    <p>60€</p>
                                 </div>
                                 <div class="flex_space-between">
-                                    <p>Velouté de légume d'antan</p>
-                                    <p>57€</p>
+                                    <p>Oeuf au plat assaisonné à la truffe sur lit de caviar</p>
+                                    <p>55€</p>
                                 </div>
                                 <div class="flex_space-between">
-                                <p>Soupe à l"oignon revisitée</p>
-                                    <p>57€</p>
-                                </div>          
+                                    <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
+                                    <p>65€</p>
+                                </div>                  
                         </section>
                     </li>                
                     <li>
-                        <section class="block_center style_menu2--b">
+                        <section class="block_center">
                             <header class="flexbox block_center">
                                 <div class="flex_center">
                                     <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Plaisir des papilles</h3>
+                                    <h3 class="hvr-underline-from-left">Oeuvre de maître 
+                                    </h3>
                                     <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
                                 </div>
                             </header>
 
                             <div class="flex_column">
                                 <div class="flex_space-between">
-                                    <p>Coquilles Saint-Jacques accompagnées d'une purée de panais</p>
-                                    <p>95€</p>
+                                    <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
+                                    <p>70€</p>
                                 </div>
                                 <div class="flex_space-between">
-                                    <p>Magret de canard et parmentier de pommes de terres</p>
-                                    <p>88€</p> 
+                                    <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</p>
+                                    <p>85€</p> 
                                 </div>                               
                                 <div class="flex_space-between">
-                                    <p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</p>
-                                    <p>175€</p>
+                                    <p>Filet de Turbot aux agrumes</p>
+                                    <p>125€</p>
                                 </div>                                
                             </div>     
                         </section>                        
                     </li>      
                     <li> 
-                        <section class="block_center style_menu2--c">
+                        <section class="block_center">
                             <header class="flexbox block_center">
                                 <div class="flex_center">
                                     <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Gourmandises sucrées</h3>
+                                    <h3 class="hvr-underline-from-left">Au sommet de l'art</h3>
                                     <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
                                 </div>
                             </header>
 
                             <div class="flex_column">
-                                <p class="padding_left">Pétales de violettes glacés et purée de noisettes</p>
-                                <p class="padding_left">Fondant au chocolat revisité</p>
-                                <p class="padding_left">Millefeuille croustillant </p>
+                                <div class="flex_space-between">
+                                    <p>Paris-Brest revisité</p>
+                                    <p>55€</p>
+                                </div>
+                                <div class="flex_space-between">
+                                    <p>Macaron au chocolat d'exception et glace a la vanille de Madagascar</p>
+                                    <p>65€</p> 
+                                </div>                               
+                                <div class="flex_space-between">
+                                    <p>Mousse au chocolat au piment d'espelette et à la truffe noire</p>
+                                    <p>60€</p>
+                                </div>                                
                             </div>     
 
                         </section>
                     </li>                         
                 </ul>
-                    
+            
+                <div class="txt_center padding_top"><h4><i class="note--color note--bottom padding_right fas fa-music"></i>La palette du goût</h4></div>        
+            
             </main>
 
         <a class="btn block_center" href="../index.html">Retour</a>
