--- a/view/menu_1b.html
+++ b/view/menu_1b.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 
     <head>
@@ -107,7 +107,11 @@
                     </li>                         
                 </ul>
             
-                <div class="txt_center padding_top"><h4><i class="note--color note--bottom padding_right fas fa-music"></i>La note enchantée</h4></div>        
+                <div class="txt_center padding_top">
+                    <h4>
+                        <i class="note--color note--bottom padding_right fas fa-music">
+                        </i>La note enchantée</h4>
+                    </div>        
             
             </main>
 
