--- a/view/menu_2b.html
+++ b/view/menu_2b.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 
     <head>
@@ -35,9 +35,9 @@
                         <section class="block_center style_menu2--a">
                             <header class="flexbox block_center">
                                 <div class="flex_center">
-                                    <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
+                                    <img class="bar_menu padding-l-r" src="../img/bar_menu2-a.png" alt="" />
                                     <h3 class="hvr-underline-from-left">Pour se mettre en appétit</h3>
-                                    <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
+                                    <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-a.png" alt="" />
                                 </div>
                             </header>
                             <div class="flex_column">
@@ -59,9 +59,9 @@
                         <section class="block_center style_menu2--b">
                             <header class="flexbox block_center">
                                 <div class="flex_center">
-                                    <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
+                                    <img class="bar_menu padding-l-r" src="../img/bar_menu2-b.png" alt="" />
                                     <h3 class="hvr-underline-from-left">Plaisir des papilles</h3>
-                                    <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
+                                    <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-b.png" alt="" />
                                 </div>
                             </header>
 
@@ -85,9 +85,9 @@
                         <section class="block_center style_menu2--c">
                             <header class="flexbox block_center">
                                 <div class="flex_center">
-                                    <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
+                                    <img class="bar_menu padding-l-r" src="../img/bar_menu2-c.png" alt="" />
                                     <h3 class="hvr-underline-from-left">Gourmandises sucrées</h3>
-                                    <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
+                                    <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-c.png" alt="" />
                                 </div>
                             </header>
 
