--- a/css/sass/Base/_base.scss
+++ b/css/sass/Base/_base.scss
@@ -45,6 +45,11 @@ ul{
     padding-top: 50px;
 }
 
+.padding-l-r{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 .padding_right{
     padding-right: 10px;
 }
