--- a/css/sass/Pages/_work.scss
+++ b/css/sass/Pages/_work.scss
@@ -16,6 +16,10 @@ section{
     height: auto;
 }
 
+.rotate-bar_menu{
+    transform: rotate(180deg);
+}
+
 .scale_img{
     width: 45vw;
     box-shadow: 0px 0px 10px 6px rgb(218, 218, 218);
