--- a/css/sass/Base/_typography.scss
+++ b/css/sass/Base/_typography.scss
@@ -18,6 +18,11 @@
     src: url("./fonts/Dancing-script.ttf");
 }
 
+@font-face{
+    font-family: "Soozle";
+    src: url("./fonts/Soozle.ttf");
+}
+
 
 html{    
     font-size: .625em; /* fallback IE8+ */
