--- a/view/menu_2b.html
+++ b/view/menu_2b.html
@@ -19,96 +19,87 @@
         <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
             
     </head>
-
     <body>        
         <header class="header_top">
-            <a href="../index.html"><h1>ohmyfood</h1></a>        
-        </header>  
-
-        <h2>Le chic à la française</h2> 
-
-        <main class="block_center width_menu color_menu--bg2 style_menu2"> 
-                <h2 class="margin_null padding_top">Le chic à la française</h2>
-             
-                <ul>
-                    <li>
-                        <section class="block_center style_menu2--a">
-                            <header class="flexbox block_center">
-                                <div class="flex_center">
-                                    <img class="bar_menu padding-l-r" src="../img/bar_menu2-a.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Pour se mettre en appétit</h3>
-                                    <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-a.png" alt="" />
-                                </div>
-                            </header>
-                            <div class="flex_column">
-                                <div class="flex_space-between">
-                                    <p>Tartare de poulpe acidulé aux zests d'orange</p>
-                                    <p>79€</p>
-                                </div>
-                                <div class="flex_space-between">
-                                    <p>Velouté de légume d'antan</p>
-                                    <p>57€</p>
-                                </div>
-                                <div class="flex_space-between">
-                                <p>Soupe à l"oignon revisitée</p>
-                                    <p>57€</p>
-                                </div>          
-                        </section>
-                    </li>                
-                    <li>
-                        <section class="block_center style_menu2--b">
-                            <header class="flexbox block_center">
-                                <div class="flex_center">
-                                    <img class="bar_menu padding-l-r" src="../img/bar_menu2-b.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Plaisir des papilles</h3>
-                                    <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-b.png" alt="" />
-                                </div>
-                            </header>
-
-                            <div class="flex_column">
-                                <div class="flex_space-between">
-                                    <p>Coquilles Saint-Jacques accompagnées d'une purée de panais</p>
-                                    <p>95€</p>
-                                </div>
-                                <div class="flex_space-between">
-                                    <p>Magret de canard et parmentier de pommes de terres</p>
-                                    <p>88€</p> 
-                                </div>                               
-                                <div class="flex_space-between">
-                                    <p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</p>
-                                    <p>175€</p>
-                                </div>                                
-                            </div>     
-                        </section>                        
-                    </li>      
-                    <li> 
-                        <section class="block_center style_menu2--c">
-                            <header class="flexbox block_center">
-                                <div class="flex_center">
-                                    <img class="bar_menu padding-l-r" src="../img/bar_menu2-c.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Gourmandises sucrées</h3>
-                                    <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-c.png" alt="" />
-                                </div>
-                            </header>
-
-                            <div class="flex_column">
-                                <p class="padding_left">Pétales de violettes glacés et purée de noisettes</p>
-                                <p class="padding_left">Fondant au chocolat revisité</p>
-                                <p class="padding_left">Millefeuille croustillant </p>
-                            </div>     
-
-                        </section>
-                    </li>                         
-                </ul>
-                    
-            </main>
-
+            <a href="../index.html">
+                <h1>ohmyfood</h1>
+            </a>        
+        </header>
+        <h2>Le chic à la française</h2>
+        <main class="block_center width_menu color_menu--bg2 style_menu2">  
+            <article>
+                <h3 class="margin_null padding_top">Le chic à la française</h3>
+                <section class="block_center style_menu2--a">
+                    <header class="flexbox block_center">
+                        <div class="flex_center">
+                            <img class="bar_menu padding-l-r" src="../img/bar_menu2-a.png" alt="" />
+                            <h3 class="hvr-underline-from-left">Pour se mettre en appétit</h3>
+                            <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-a.png" alt="" />
+                        </div>
+                    </header>
+                    <ul class="flex_column">
+                        <li class="flex_space-between">
+                            <p>Tartare de poulpe acidulé aux zests d'orange</p>
+                            <p>79€</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p>Velouté de légume d'antan</p>
+                            <p>57€</p>
+                        </li>
+                        <li class="flex_space-between">
+                        <p>Soupe à l"oignon revisitée</p>
+                        <p>57€</p>
+                    </ul>          
+                </section>      
+                <section class="block_center style_menu2--b">
+                    <header class="flexbox block_center">
+                        <div class="flex_center">
+                            <img class="bar_menu padding-l-r" src="../img/bar_menu2-b.png" alt="" />
+                            <h3 class="hvr-underline-from-left">Plaisir des papilles</h3>
+                            <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-b.png" alt="" />
+                        </div>
+                    </header>
+                    <ul class="flex_column">
+                        <li class="flex_space-between">
+                            <p>Coquilles Saint-Jacques accompagnées d'une purée de panais</p>
+                            <p>95€</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p>Magret de canard et parmentier de pommes de terres</p>
+                            <p>88€</p> 
+                        </li>                               
+                        <li class="flex_space-between">
+                            <p>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</p>
+                            <p>175€</p>
+                        </li>                                
+                    </ul>     
+                </section>                        
+                <section class="block_center style_menu2--c">
+                    <header class="flexbox block_center">
+                        <div class="flex_center">
+                            <img class="bar_menu padding-l-r" src="../img/bar_menu2-c.png" alt="" />
+                            <h3 class="hvr-underline-from-left">Gourmandises sucrées</h3>
+                            <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu2-c.png" alt="" />
+                        </div>
+                    </header>
+                    <ul class="flex_column">
+                        <li class="flex_space-between">
+                            <p class="padding_left">Pétales de violettes glacés et purée de noisettes</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p class="padding_left">Fondant au chocolat revisité</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p class="padding_left">Millefeuille croustillant </p>
+                        </li>
+                    </ul>     
+                </section>                       
+            </article>                    
+        </main>
         <a class="btn block_center" href="../index.html">Retour</a>
-
         <footer>
             <a class="btn_foot" href="mentions_legales.html">Mentions légales</a>
             <a class="btn_foot" href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>           
-        </footer>    
-    
+        </footer>   
     </body>
 </html>
