--- a/view/menu_3b.html
+++ b/view/menu_3b.html
@@ -23,99 +23,83 @@
     <body>        
         <header class="header_top">
             <a href="../index.html"><h1>ohmyfood</h1></a>        
-        </header>  
-
-        <h2>Le délice des papilles</h2> 
-
-        <main class="block_center width_menu color_menu--bg1  style_menu1"> 
-            <div class="txt_center padding_top"><i class="note--color note--top fas fa-music"></i></div> 
-                <h2 class="margin_null">Le délice des papilles</h2>
-             
-                <ul>
-                    <li>
-                        <section class="block_center">
-                            <header class="flexbox block_center">
-                                <div class="flex_center">
-                                    <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Pour bien commencer</h3>
-                                    <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
-                                </div>
-                            </header>
-                            <div class="flex_column">
-                                <div class="flex_space-between">
-                                    <p>Tartare de thon assaisonné au yuzu</p>
-                                    <p>55€</p>
-                                </div>
-                                <div class="flex_space-between">
-                                    <p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
-                                    <p>89€</p>
-                                </div>
-                                <div class="flex_space-between">
-                                    <p>Velouté de cèpes aux truffes</p>
-                                    <p>56€</p>
-                                </div>
-                            </div>                   
-                        </section>
-                    </li>                
-                    <li>
-                        <section class="block_center">
-                            <header class="flexbox block_center">
-                                <div class="flex_center">
-                                    <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Pour bien continuer</h3>
-                                    <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
-                                </div>
-                            </header>
-                            <div class="flex_column">
-                                <div class="flex_space-between">
-                                    <p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
-                                    <p>110€</p>
-                                </div>
-                                <div class="flex_space-between">
-                                    <p>Langouste rôtie et ses légumes de saison</p>
-                                    <p>225€</p> 
-                                </div>                               
-                                <div class="flex_space-between">
-                                    <p>Côte de boeuf argus et sa purée de panais</p>
-                                    <p>115€</p>
-                                </div>                                
-                            </div>     
-                        </section>                        
-                    </li>      
-                    <li> 
-                        <section class="block_center">
-                            <header class="flexbox block_center">
-                                <div class="flex_center">
-                                    <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Pour bien terminer</h3>
-                                    <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
-                                </div>
-                            </header>
-                            <div class="flex_column">
-                                <div class="flex_space-between">
-                                    <p>Farandole de desserts du chef</p>
-                                    <p>55€</p>
-                                </div>
-                                <div class="flex_space-between">
-                                    <p>Crème brulée revisitée</p>
-                                    <p>60€</p> 
-                                </div>                               
-                                <div class="flex_space-between">
-                                    <p>Tiramisu à la noisette</p>
-                                    <p>55€</p>
-                                </div>                                
-                            </div> 
-
-                        </section>
-                    </li>                         
-                </ul>
-            
-                <div class="txt_center padding_top"><h4><i class="note--color note--bottom padding_right fas fa-music"></i>Le délice des papilles</h4></div>        
-            
-            </main>
-
+        </header>
+        <h2>Le délice des papilles</h2>
+        <main class="block_center width_menu color_menu--bg3  style_menu3">  
+            <article class="style_menu3-b">
+                <h3 class="margin_null">Le délice des papilles</h3>       
+                <section class="block_center">
+                    <header class="flexbox block_center">
+                        <div class="flex_center">
+                            <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
+                            <h4 class="hvr-underline-from-left">Pour bien commencer</h4>
+                            <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
+                        </div>
+                    </header>
+                    <ul class="flex_column">
+                        <li class="flex_space-between">
+                            <p>Tartare de thon assaisonné au yuzu</p>
+                            <p>55€</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
+                            <p>89€</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p>Velouté de cèpes aux truffes</p>
+                            <p>56€</p>
+                        </li>
+                    </ul>                   
+                </section>
+                <section class="block_center">
+                    <header class="flexbox block_center">
+                        <div class="flex_center">
+                            <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
+                            <h4 class="hvr-underline-from-left">Pour bien continuer</h4>
+                            <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
+                        </div>
+                    </header>
+                    <ul class="flex_column">
+                        <li class="flex_space-between">
+                            <p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
+                            <p>110€</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p>Langouste rôtie et ses légumes de saison</p>
+                            <p>225€</p> 
+                        </li>                               
+                        <li class="flex_space-between">
+                            <p>Côte de boeuf argus et sa purée de panais</p>
+                            <p>115€</p>
+                        </li>                                
+                    </ul>     
+                </section>                         
+                <section class="block_center">
+                    <header class="flexbox block_center">
+                        <div class="flex_center">
+                            <img class="bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
+                            <h4 class="hvr-underline-from-left">Pour bien terminer</h4>
+                            <img class="bar_menu rotate-bar_menu padding-l-r" src="../img/bar_menu3.png" alt="" />
+                        </div>
+                    </header>
+                    <ul class="flex_column">
+                        <li class="flex_space-between">
+                            <p>Farandole de desserts du chef</p>
+                            <p>55€</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p>Crème brulée revisitée</p>
+                            <p>60€</p> 
+                        </li>                               
+                        <li class="flex_space-between">
+                            <p>Tiramisu à la noisette</p>
+                            <p>55€</p>
+                        </li>                                
+                    </ul>
+                </section>                      
+            </article>
+        </main>
         <a class="btn block_center" href="../index.html">Retour</a>
-
         <footer>
             <a class="btn_foot" href="mentions_legales.html">Mentions légales</a>
             <a class="btn_foot" href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>           
