--- a/css/sass/Base/_base.scss
+++ b/css/sass/Base/_base.scss
@@ -82,6 +82,10 @@ ul{
         font-size: 6rem;
     }
 
+    h4{
+        font-size: 4rem;
+    }
+
     .flexbox{  
         display: flex;      
         flex-wrap: nowrap;        
