--- a/css/sass/Utils/_variables.scss
+++ b/css/sass/Utils/_variables.scss
@@ -14,8 +14,8 @@ $cd-menu2-b-txt: #a56799;
 $cd-menu2-c-txt: #6e4ccc;
 
 // Variables Colors Menu3
-$cd-menu3-bg: #fff5fe;
-$cd-menu3-txt: #c67412;
+$cd-menu3-bg: #edefef;
+$cd-menu3-txt: #181919;
 
 
 
