--- a/view/menu_1b.html
+++ b/view/menu_1b.html
@@ -22,101 +22,95 @@
 
     <body>        
         <header class="header_top">
-            <a href="../index.html"><h1>ohmyfood</h1></a>        
-        </header>  
-
+            <a href="../index.html">
+                <h1>ohmyfood</h1>
+            </a>        
+        </header> 
         <h2>La note enchantée</h2> 
-
         <main class="block_center width_menu color_menu--bg1  style_menu1"> 
-            <div class="txt_center padding_top"><i class="note--color note--top fas fa-music"></i></div> 
-                <h2 class="margin_null">La note enchantée</h2>
-             
-                <ul>
-                    <li>
-                        <section class="block_center">
-                            <header class="flexbox block_center">
-                                <div class="flex_center">
-                                    <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Prélude</h3>
-                                    <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
-                                </div>
-                            </header>
-                            <div class="flex_column">
-                                <div class="flex_space-between">
-                                    <p>Ravioles de foie gras accompagnés de leur crème</p>
-                                    <p>98€</p>
-                                </div>
-                                <div class="flex_space-between">
-                                    <p>Caviar osciètre sur blini à la farine de blé noir</p>
-                                    <p>115€</p>
-                                </div>
-                                <div class="flex_space-between">
-                                    <p>Homard et espuma de potiron mariné aux zests d'orange</p>
-                                    <p>105€</p>
-                                </div>
-                                <div class="flex_space-between">
-                                    <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
-                                    <p>89€</p>
-                                </div>
-                            </div>                   
-                        </section>
-                    </li>                
-                    <li>
-                        <section class="block_center">
-                            <header class="flexbox block_center">
-                                <div class="flex_center">
-                                    <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Point d'orgue</h3>
-                                    <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
-                                </div>
-                            </header>
-
-                            <div class="flex_column">
-                                <div class="flex_space-between">
-                                    <p>Noix de coquilles Saint-Jacques sur lit de purée de céléri-rave</p>
-                                    <p>102€</p>
-                                </div>
-                                <div class="flex_space-between">
-                                    <p>Langoustine poêlée, purée de patate douce</p>
-                                    <p>205€</p> 
-                                </div>                               
-                                <div class="flex_space-between">
-                                    <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
-                                    <p>169€</p>
-                                </div>                                
-                            </div>     
-                        </section>                        
-                    </li>      
-                    <li> 
-                        <section class="block_center">
-                            <header class="flexbox block_center">
-                                <div class="flex_center">
-                                    <img class="bar_menu padding_right" src="../img/bar_menu1.png" alt="" />
-                                    <h3 class="hvr-underline-from-left">Mouvement final</h3>
-                                    <img class="bar_menu padding_left" src="../img/bar_menu1.png" alt="" />
-                                </div>
-                            </header>
-
-                            <div class="flex_column">
-                                <p class="padding_left">Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
-                                <p class="padding_left">Baba au rhim revisité avec son coulis de citron</p>
-                                <p class="padding_left">Tarte au citron meringuée destructurée</p>
-                            </div>     
-
-                        </section>
-                    </li>                         
-                </ul>
-            
-                <div class="txt_center padding_top">
-                    <h4>
-                        <i class="note--color note--bottom padding_right fas fa-music">
-                        </i>La note enchantée</h4>
-                    </div>        
-            
-            </main>
-
+            <div class="txt_center padding_top">
+                <i class="note--color note--top fas fa-music"></i>
+            </div> 
+            <article>
+                <h3 class="margin_null">La note enchantée</h3>
+                <section class="block_center">
+                    <header class="flexbox block_center">
+                        <div class="flex_center">
+                            <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
+                            <h3 class="hvr-underline-from-left">Prélude</h3>
+                            <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
+                        </div>
+                    </header>
+                    <ul class="flex_column">
+                        <li class="flex_space-between">
+                            <p>Ravioles de foie gras accompagnés de leur crème</p>
+                            <p>98€</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p>Caviar osciètre sur blini à la farine de blé noir</p>
+                            <p>115€</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p>Homard et espuma de potiron mariné aux zests d'orange</p>
+                            <p>105€</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
+                            <p>89€</p>
+                        </li>
+                    </ul>                   
+                </section>                
+                <section class="block_center">
+                    <header class="flexbox block_center">
+                        <div class="flex_center">
+                            <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
+                            <h3 class="hvr-underline-from-left">Point d'orgue</h3>
+                            <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
+                        </div>
+                    </header>
+                    <ul class="flex_column">
+                        <li class="flex_space-between">
+                            <p>Noix de coquilles Saint-Jacques sur lit de purée de céléri-rave</p>
+                            <p>102€</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p>Langoustine poêlée, purée de patate douce</p>
+                            <p>205€</p> 
+                        </li>                               
+                        <li class="flex_space-between">
+                            <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
+                            <p>169€</p>
+                        </li>                                
+                    </ul>     
+                </section>                        
+                <section class="block_center">
+                    <header class="flexbox block_center">
+                        <div class="flex_center">
+                            <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
+                            <h3 class="hvr-underline-from-left">Mouvement final</h3>
+                            <img class="bar_menu padding-l-r" src="../img/bar_menu1.png" alt="" />
+                        </div>
+                    </header>
+                    <ul class="flex_column">
+                        <li class="flex_space-between">
+                            <p class="padding_left">Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
+                        </li>
+                        <li class="flex_space-between">
+                            <p class="padding_left">Baba au rhim revisité avec son coulis de citron</p>
+                        </li>                                
+                        <li class="flex_space-between">
+                            <p class="padding_left">Tarte au citron meringuée destructurée</p>
+                        </li>                                
+                    </ul>     
+                </section>
+            </article>            
+            <div class="txt_center padding_top">
+                <h4>
+                    <i class="note--color note--bottom padding-l-r fas fa-music"></i>La note enchantée
+                </h4>
+            </div>  
+        </main>
         <a class="btn block_center" href="../index.html">Retour</a>
-
         <footer>
             <a class="btn_foot" href="mentions_legales.html">Mentions légales</a>
             <a class="btn_foot" href="mailto:ohmyfood@hotmail.com">Contactez-nous</a>           
